--- a/net.cetheus.wcf2.bbcode.headline 2/package.xml
+++ b/net.cetheus.wcf2.bbcode.headline 2/package.xml
@@ -21,10 +21,12 @@
 	<instructions type="install">
 		<instruction type="file">files.tar</instruction>
 		<instruction type="bbcode">bbcode.xml</instruction>
+		<instruction type="language">languages/*.xml</instruction>
 	</instructions>
 	
 	<instructions type="update" fromversion="1.0.0">
 		<instruction type="file">files.tar</instruction>
 		<instruction type="bbcode">bbcode.xml</instruction>
+		<instruction type="language">languages/*.xml</instruction>
 	</instructions>
 </package>
