--- a/net.cetheus.wcf2.bbcode.headline 2/package.xml
+++ b/net.cetheus.wcf2.bbcode.headline 2/package.xml
@@ -5,8 +5,8 @@
 		<packagename language="de">BBCode Headline</packagename>
 		<packagedescription>This plugin adds a BB-Code for Headlines</packagedescription>
 		<packagedescription language="de">Dieses Plugin fügt einen BB-Code für Überschriften (Headlines) hinzu.</packagedescription>
-		<version>1.0.1</version>
-		<date>2014-03-01</date>
+		<version>1.0.3</version>
+		<date>2014-03-20</date>
 	</packageinformation>
 
 	<authorinformation>
@@ -15,18 +15,28 @@
 	</authorinformation>
 
 	<requiredpackages>
-		<requiredpackage minversion="2.0.0 Beta 1">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="2.0.0">com.woltlab.wcf</requiredpackage>
 	</requiredpackages>
-	
+
+	<optionalpackages>
+		<optionalpackage file="optionals/net.cetheus.wcf2.bbcode.optional.fontawesome.tar">net.cetheus.wcf2.bbcode.optional.fontawesome</optionalpackage> 
+	</optionalpackages>
+
 	<instructions type="install">
 		<instruction type="file">files.tar</instruction>
 		<instruction type="bbcode">bbcode.xml</instruction>
 		<instruction type="language">languages/*.xml</instruction>
+		<instruction type="template">templates.tar</instruction> 
 	</instructions>
 	
 	<instructions type="update" fromversion="1.0.0">
 		<instruction type="file">files.tar</instruction>
 		<instruction type="bbcode">bbcode.xml</instruction>
 		<instruction type="language">languages/*.xml</instruction>
+	</instructions>
+
+	<instructions type="update" fromversion="1.0.1">
+		<instruction type="file">files.tar</instruction>
+		<instruction type="template">templates.tar</instruction> 
 	</instructions>
 </package>
